YAMLs/DEV/Ingress/rel-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rel-iot-ingress
  namespace: rel-iot-dev
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /health/?(.*)
      - backend:
          serviceName: scef-event-listener-service
          servicePort: 80
        path: /mo/?(.*)
